@@ -43,4 +43,6 @@ void free_sysfs_sensor(struct text_object *);
 int get_entropy_avail(unsigned int *);
 int get_entropy_poolsize(unsigned int *);
 
+void update_stat(void);
+
 #endif /* _LINUX_H */
