@@ -4,6 +4,10 @@
 	* Added support for $uid_name and $gid_name
 
 2009-11-14
+	* Renamed $running_processes to $running_threads
+	* Added real $running_processes
+
+2009-11-14
 	* Added support for $pid_state and $pid_state_short
 	* Added support for $cmdline_to_pid
 	* Make it possible to use other vars as arguments for the $pid_'s
